--- a/source/_posts/三少爷的剑.md
+++ b/source/_posts/三少爷的剑.md
@@ -1,5 +1,10 @@
 ---
 title: 三少爷的剑
+password: laoman
+abstract: 内容敏感，不易公开，已加密，联系洋少获取密码。
+message: 您好, 这里需要密码.
+wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
+wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
 ---
 
  三少爷的剑！！！！
