测试图片插入

--- a/source/_posts/这一次，让我们一起改变中国.md
+++ b/source/_posts/这一次，让我们一起改变中国.md
@@ -2,6 +2,11 @@ title: 这一次，让我们一起改变中国
 author: laoman
 date: 2022-03-11 22:17:37
 tags:
+password: laoman
+abstract: 内容敏感，不宜公开，已加密，联系洋少获取密码。
+message: 您好, 这里需要密码.
+wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
+wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
 ---
 这些天我反复的看到一些奇谈怪论，声称丰县事件进展到现在，其最终处理方式，一定是和稀泥————政府随便推出几个人出来顶罪，再随便给案件中涉及的多名妇女安排一个身份和去处，然后安排几个媒体和几名大V唱赞歌，最后召开一次表彰大会，庆祝又一次获得了胜利————典型的我大中国又赢了一次的悲观主义论调。
 
