--- a/source/_posts/欧美需求萎缩已成定局（5-29-6-1）.md
+++ b/source/_posts/欧美需求萎缩已成定局（5-29-6-1）.md
@@ -5,7 +5,7 @@ tags:
 ---
 **5.29**
 
-欧美需求萎缩应该已经是定局。在剧烈通胀的背景下，美联储和欧洲央行都不敢再凭空印钱，所以，滞胀终于再次降临世间，隔了整整四十年了。这也意味着人类依靠电子信息技术关押了四十年的危机之狼，正式出笼。
+欧美需求萎缩应该已经是定局。<!-- more -->在剧烈通胀的背景下，美联储和欧洲央行都不敢再凭空印钱，所以，滞胀终于再次降临世间，隔了整整四十年了。这也意味着人类依靠电子信息技术关押了四十年的危机之狼，正式出笼。
 - - -
 
 
