--- a/source/_posts/化制造（微博号：笑破地皮2022-06-2-2022-06-26）.md
+++ b/source/_posts/化制造（微博号：笑破地皮2022-06-2-2022-06-26）.md
@@ -3,7 +3,7 @@ author: laoman
 date: 2022-06-27 07:13:02
 tags:
 ---
-从目前来看，俄乌战争最有趣的影响是：欧洲开始放弃装逼式极端环保政策。清洁能源一直都是伪命题，碳排放更是完全虚构的概念。
+从目前来看，俄乌战争最有趣的影响是：<!-- more-->欧洲开始放弃装逼式极端环保政策。清洁能源一直都是伪命题，碳排放更是完全虚构的概念。
 
 自己放弃能源生产，改成从俄罗斯大规模进口能源，这就是清洁能源了？全球碳排放就减少了？这特么不是自欺欺人吗？扯淡的是，欧洲的白左们还真信这一套。可见弱智人群占比9成这个定律，在我大中国适用，在欧洲也一样。
 
