佩洛西之行

--- a/source/_posts/佩洛西之行.md
+++ b/source/_posts/佩洛西之行.md
@@ -3,7 +3,7 @@ author: laoman
 date: 2022-08-04 19:46:36
 tags:
 ---
-近两年来失业人群的主就业渠道就两个：开网约车和送快递。网约车行业现在到达极限，整体业务规模停滞在月均6亿单左右，无法再容纳新的网约车司机了。至于送快递，则取决于于网购业务是否已经到达极限。现在网购量占社会消费品零售总额的比例已经到达三成，这就是理论上的极限，送快递行业也丧失了增长性。
+近两年来失业人群的主就业渠道就两个：开网约车和送快递。<!-- more-->网约车行业现在到达极限，整体业务规模停滞在月均6亿单左右，无法再容纳新的网约车司机了。至于送快递，则取决于于网购业务是否已经到达极限。现在网购量占社会消费品零售总额的比例已经到达三成，这就是理论上的极限，送快递行业也丧失了增长性。
 
 所以，从现在开始，失业之后，大概率就是刚性失业，无法实现再就业了。
 - - - 
