--- a/source/_posts/凛冬将至（微博号：笑破地皮。2022-09-12-2022-09-23）.md
+++ b/source/_posts/凛冬将至（微博号：笑破地皮。2022-09-12-2022-09-23）.md
@@ -118,3 +118,6 @@ tags:
 
 然而，到两年多后的现在这一刻，还没被现实抽醒的，还在继续岁月静好的，还剩多少呢？
 - - -
+近二十年来，鹅没有任何动员能力。它尝试过建立现代化工产业，失败了。它尝试过重建汽车产业，失败了。它无数次的想要重建东部那些陷入死亡的城市群，失败了。它想要恢复电影产业的荣光，失败了。它试图重建军魂，今年的事实证明，也失败了。
+
+现在它试图在毫无相关能力的情况下实施全民总动员。我只能这么说：这是我近五年以来，见过的第三大荒谬之事。第一是拜登曲线。第二不说了。
