--- a/source/_posts/政吃紧（微博：数据轰炸机。2023-01-07-2023-01-10）.md
+++ b/source/_posts/政吃紧（微博：数据轰炸机。2023-01-07-2023-01-10）.md
@@ -1,4 +1,4 @@
-title: 财政吃紧（微博：数据轰炸机。2023.01.07-2023.01.10）
+title: 财政吃紧（微博：数据轰炸机。2023.01.07-2023.01.14）
 author: laoman
 date: 2023-01-11 20:24:43
 tags:
@@ -70,3 +70,37 @@ tags:
 5、吃财政饭的同志需购买当地政府的地方债，年均工资的三层直接以地方债形式发放。侠之大者，为国买债。
 
 有了吃财政饭的同志们的模范带头作用，我国经济必将在两年内重返巅峰！握拳！同志们加油！大家都看着你们呢！
+- - -
+1.12
+
+有几个数据值得一读：
+
+根据交通运输部的数据，2022年我国新核发的网约车驾驶员证114万本，较2021年新发的86万本，增幅32.6%。网约车大概算是我国就业增长最快的一个行业了，失业白领去开网约车已经是一种流行时尚。
+
+这种时尚毫无疑问也带动了电动车的销量。2022年网约车新增车辆运输证56万本，较2021年新增的40万本，增幅40.0%。这56万部新增车辆基本上都是电动车。
+- - -
+
+我要发起一个动议：坚决反对废除死刑。
+
+废除死刑乃是极端白左搞出来的扯淡概念，跟极端环保、极端性变态自由、黑人优先和难民优先这四件事的性质是一样的，其意义只有一个：在人类基因里掺入更多劣质基因，恨不得可以算是人类灭绝计划的一部分。
+
+对于以后再假装道貌岸然的跳出来扯废除死刑的蛋的蠢货，各位可以一句话怼回去：你如此强烈的想要灭绝人类到底安的是什么心？
+- - -
+1.13
+
+2022年广东省由财政直接投入的防疫资金711亿。这个数据是什么意思呢？
+
+2022年广东省财政预算收入13300亿，防疫支出占收入的比值为5.3%。
+在当年度的各主要支出项中，防疫支出规模与交通运输支出的753亿相当，高于环保支出的463亿和文体传媒支出的353亿。
+2022年广东省财政投入解决民生实事和群众“急难愁盼”问题的资金为806亿，仅稍高于抗疫支出。
+
+- - -
+1.14
+
+为什么中国人越来越卷，从幼儿园就开始卷？因为不仅上升机会日益匮乏，已有的社会阶层还难以守住，轻易就能往下崩塌两三个层级。从中产塌入赤贫，只在一夜之间。所以每个人都在焦虑，都在卷。
+
+为什么上升机会匮乏并且阶层极易往下坍塌？因为产业外迁正在加速，社会财富在整体减少。蛋糕变小了。
+
+为什么产业加速外迁？因为一方面成本优势不再明显，劳动力成本相对欧美略有优势，税收及能源成本则超过了欧美，跟东南亚相比更是大幅超越。另一方面，长期投资资金缺乏安全感。
+
+只能说到这第三个为什么。
