--- a/source/_posts/政吃紧（微博：数据轰炸机。2023-01-07-2023-01-10）.md
+++ b/source/_posts/政吃紧（微博：数据轰炸机。2023-01-07-2023-01-10）.md
@@ -1,4 +1,4 @@
-title: 财政吃紧（微博：数据轰炸机。2023.01.07-2023.01.14）
+title: 财政吃紧（微博：数据轰炸机。2023.01.07-2023.01.17）
 author: laoman
 date: 2023-01-11 20:24:43
 tags:
@@ -104,3 +104,56 @@ tags:
 为什么产业加速外迁？因为一方面成本优势不再明显，劳动力成本相对欧美略有优势，税收及能源成本则超过了欧美，跟东南亚相比更是大幅超越。另一方面，长期投资资金缺乏安全感。
 
 只能说到这第三个为什么。
+- - -
+——————
+1.15
+
+一组乘用车的数据：
+国内2021年电动车销量299万台，2022年销量567万台，同比增幅90.0%，可以说是爆发式增长无疑了。
+
+相对而言，油车的销量就不好看了。2021年油车销量1751万台，2022年1515万台，销量同比萎缩13.5%。
+
+电动车的爆发，差不多弥补了油车的萎缩，拉动2022年乘用车销量整体微弱上升1.6%。
+
+这里的关键问题是，电动车的这一波快速爆发，是否可以持续？
+
+根据交通运输部的数据，2022年网约车新增注册了56万台车，基本上都是电动车，失业白领去开网约车乃是新兴时尚。正规出租车的总数约140万部，其中大部分在2022年被替换为电动车，替换量约一百万台。此外，各地民间私下做客运生意的车辆（俗称的黑车）在2022年也进行了大规模从油车向电动车的替换，数据难以统计，我个人估算也不会少于一百万台。这里的原因是一样的：2022年油价暴涨而电价相对便宜，用电动车可以大幅节省成本。
+
+合计起来，2022年营运车辆拉动了至少250万台电动车的消费，可以说电动车的销量暴增全都是这个原因。但这就是一枪打的买卖，接下来这些车辆会逐步消耗和报废，让电动车商始终都有生意做，但是爆发式不会再有了。
+
+这就是汽车行业的现状了。
+- - -
+1.16
+
+我终于把年底这一波忙碌忙完了。
+收拾一下心情，准备迎接从明天开始的这一波2022全年数据大赏。
+
+这样，我尽量用平和的态度去看待这些数据，把它设置成一个基准，可以跟未来比对的基准，毕竟我们刚刚从那不可言说的三年里走出来，我也不苛求2022年的数据。我还是尽可能的着眼于未来，着眼于接下来的2023年一季度二季度三季度四季度，每个季度相对2022年的基准线都有什么趋势上的变化。
+
+各位也可以收拾心情，等着接下来的数据盛宴了。
+- - -
+1.17
+
+（点菜篇第一季）
+本篇是知识产权市场分析的第一篇，主要是阐述我国知识产权市场的整体格局，让大家建立起一个基本概念。
+
+根据国家统计局发布的中国科技统计年鉴，我国2016年的技术合同（包括专利及非专利技术）成交规模为11407亿，2020年为28252亿，5年的累计增幅达到147.7%。技术市场的增长速度不可谓不快。
+
+然而令人关注的点在于，在2020年的这28252亿的技术合同中，真正涉及专利技术授权或转让的合同仅3790亿，占比只有13.4%，其它的大都是技术秘密合同（5381亿，占比19.0%）以及技术服务合同（16998亿，占比60.1%）。剩下那点比例则主要是计算机软件合同。
+
+技术秘密合同显著超过专利合同，这真是一个令人非常尴尬的现实情况。这意味着在我大中国国民更愿意守住自己的技术秘密，而不是去申请专利保护，这其实是专利保护并不很到位的体现。
+而技术服务合同占据压倒性的优势，我认为与下面这件事有关。
+
+相对于国内如此庞大且畸形的技术市场规模而言，我国每年的技术进口规模非常小，简直小得可以忽略不计。2020年我国从国外的技术引进合同金额合计仅315亿美元，折人民币仅约2000亿，基本没有分析价值。
+
+为什么我国的技术引入规模如此小？因为欧美对我国的技术封锁一直都事实存在。在核心技术被封锁之后，我国进口的大量高科技设备其实并没有被我国吃透，这些设备的日常维护其实都指望外资企业提供的长期技术服务。这就导致了极高额的技术服务市场的长期存在。
+
+因此，我国的知识产权市场，或者说技术市场的整体特征有两个，第一，缺乏核心技术导致的技术服务市场畸形的庞大；第二，技术秘密的地位显著超过了专利技术。
+
+在这两点的基础上，我们才能更加深入的讨论我国的技术市场的未来走向。（待续）
+- - -
+关于今天发布的宏观经济数据，我有几个极大的疑问，需要后续发布的其它分项或下级数据的验证。
+
+我有一个还有待确证的问题是这样的：今时今日的数据，国家统计局在被我或者我这种数据狂人怼了太多次以后，已经开始投入巨大的时间成本和人力成本进行系统性修正。但是他们忽略了一点，就是常识。而常识，隐藏在分项数据和下级数据之中。
+
+我不相信国家统计局有强大到全面修正分项和下级数据的能力。且让我们拭目以待。上次我发大招质疑人口数据的时候，国家统计局连续公开发文解释了三次依然毫无效果，这次我看他们还能怎么办。
