--- a/source/_posts/效投资多少（微博：数据轰炸机-2023-01-18-2023-01-23）.md
+++ b/source/_posts/效投资多少（微博：数据轰炸机-2023-01-18-2023-01-23）.md
@@ -1,4 +1,4 @@
-title: 有效投资多少（微博：数据轰炸机 2023.01.18-2023.01.23）
+title: 有效投资多少（微博：数据轰炸机 2023.01.18-2023.01.28）
 author: laoman
 date: 2023-01-24 08:17:17
 tags:
@@ -90,3 +90,16 @@ GDP的本质就是全行业的税前利润+工资，也就是增加值概念。<
 比如，经济联系紧密的城市之间建设高铁，就是有效投资。而2022年遍布各城市的核酸检测点和方舱，则是无效投资；核酸检测企业投资的大型检测中心以及流动检测车等，也是无效投资；暴雷地产商的在售楼盘如果无法忽悠到新的资金进来支持工程建设，那最终也是无效投资；国企拿了低息贷款把自己长期闲置的生产线照原样翻新一次，当然也还是无效投资。
 
 我现在的问题是：我们这两年的有效投资，占总固定资产投资的比例，能达到多少？30%有没有？如果没有的话，如何提升有效投资的比例呢？
+- - -
+1.24
+跨国公司现在普遍面对巨大的抉择压力：在左和右之间（比如极端环保或者正常环保）必须选一边，在要不要和中国做生意或者要不要扩大或缩小在中国的生意问题上必须做出决定，在将产业基地迁回本土还是东南亚还是南美的问题上必须做出选择。总之在2023年，所有的选择都必须做出并且要完成执行，拖不下去了。
+
+而我大中国的企业则好很多，因为没得选择。
+- - -
+1.25
+说个很好玩的事，大家可以注意观察观察。中西部市县大多数的政府部门都是独立占地，建一栋独立办公楼，加一个大院子，种满花草树木，有些还有大鱼池。这种独立办公区的维持费用非常高，保安保洁和绿化养护的成本都算是行政办公成本，得从财政里出，轻轻松松一个月就得是十万开销，少不了的。
+- - -
+1.27
+现在大陆所有平台都不合适聊经济了，微博还算开明了，还能留着几个分析经济的号，头条啊抖音啊B站什么的，恨不得发现一个封杀一个。你敢在那些平台列举几个稍微悲观一点的经济数据，下一秒就被蜂拥而至的举报直接把你的号给弄死了。
+
+可怜中国人如果学不会爬梯子，在任何信息平台，至少经济领域已经没啥可看的内容了。
