--- a/source/_posts/全民反智（微博：数据轰炸机-2023-01-29-2013-02-04）.md
+++ b/source/_posts/全民反智（微博：数据轰炸机-2023-01-29-2013-02-04）.md
@@ -77,3 +77,5 @@ tags:
 
 那就没有疑问吧。唯有在深夜，在你每一个失眠的黑夜，他的眼睛，那双可以在黑暗中清晰视物的近视的眼睛，或许正在看着你，和我。
 ![胡鑫宇](/images/20230204002.jpg)
+- - -
+看到那些谈论杀人案就讨论动机的我真的觉得太可笑了。杀人需要动机吗？我大中国这些年遍地发作的无差别杀人罪犯们冷冷一笑，连环杀手们冷冷一笑，反社会人格们冷冷一笑，无聊到极致的农村闲汉冷冷一笑。 
