--- a/source/_posts/一个结论（微博：数据轰炸机2023-02-07-2023-02-09）.md
+++ b/source/_posts/一个结论（微博：数据轰炸机2023-02-07-2023-02-09）.md
@@ -17,7 +17,7 @@ tags:
 推特以及一众欧美信息平台的后台言论审查和舆论操控机制，被马斯克爆了出来，看起来也不比我大中国科学多少。
 
 这大概就是全球经济丧失增长性，进入危机模式后的早期症状吧。
-——————
+- - -
 我有一个结论，不保证百分百正确，只能供各位参考：
 
 离岸人民币市场已经成为了尾大不掉的巨大麻烦。
@@ -52,6 +52,26 @@ tags:
 
 这么大一笔钱，即使放到全球金融市场都是一笔极其庞大的巨款，理论上是根本隐藏不住的。它到底在哪里？这个问题真的需要我大中国的经济学家们进行深入研究，并给出对策性建议。
 这件事的重要性，对接下来必然面临的中美金融对决来说，真的是如何高估，都不过分。
+- - -
+看了看这几天的评论，纠正一个胡说八道：卖地收入从去年初开始转由税务部门征收，但是在统计时该笔收入并未跟有些人胡扯的那样计入了“非税收入”这一科目，而是跟以前一样，依然计入“政府性基金收入”科目。
+
+所以，地方政府的非税收入科目去年大幅增长，并不是因为卖地收入计了进来，而依然是通过我们熟悉的那些办法。比如，每到年关，对小饭店的卫生检查就会比较频繁了。咳咳。
+- - -
+这些年来很多变化有着清晰的时代印痕。
+
+大部分国人不再看书也不看报纸杂志。
+
+大部分国人放弃了思考，也不再憧憬明天。
+
+理想主义者是贬义词，类似一个笑话。
+
+理想本身就是笑话。
+
+历练、见识、磨砥以及其它所有经历困难之后成长的词汇，都不受待见。重生或者穿越为王侯公子倒是很受欢迎。
+
+
+而这种全民摆烂，恰恰就是我大中国极其独特的“财富诱惑式”社会动员能力一步步消失的表征而已。
+- - -
 
 **付费内容：**
 
