--- a/source/_posts/政府没有了公信力（微博：数据轰炸机-2023-02-10-2023-02-11）.md
+++ b/source/_posts/政府没有了公信力（微博：数据轰炸机-2023-02-10-2023-02-11）.md
@@ -26,3 +26,31 @@ tags:
 老百姓将这一切都看在眼里，记在心里，并且一定会给出群体反应。于是，年轻人流行“我们是最后一代”的观念，并且普遍躺平摆烂，中老年人则酷爱刷抖音迷短视频。总结起来，就是全民反智的同时，不再相信政府或者专家的任何意见。
 
 这就是最大的反噬。这一后果将会在接下来迅速体现在经济数据上，体现在复苏力度上，体现在经济政策的落地上。接下来，且让我们拭目以待，当政府没有了公信力，它能够如何激发老百姓的信心，投身于经济建设的大潮呢？
+- - -
+继续说万亿美元失踪的事。
+
+根据海关数据，2022年我国民营企业创造的外贸顺差为11322亿美元（21312亿美元出口-9990亿进口）；
+
+外资企业（含港澳台企业）创造的外贸顺差为1703亿美元（11233-9530）；
+国有企业创造的外贸顺差为-4476亿美元（2841-7317），注意这是一个负值。国有企业垄断了绝大部分大宗商品的进口，包括石油铁矿煤炭粮食等，并且国有工业企业基本没有出口能力，所以国有企业一直以来在外贸领域扮演的都是纯逆差的角色。
+
+外管局对外贸结算有着非常严厉的规定，一般不允许货款长期滞留境外。你申报了一笔出口，但是最长一年内还没有外汇打进来，外管局的电话就要打进来了。这方面外资企业管得稍微松一点，但是外资企业创造的顺差本来占比也不大，1703亿美元，占全部外贸顺差的比值也只有19.9%。民企的话，你胆敢不把钱结回来，把资金长期留在境外，分分钟要被整出翔。
+
+然而，光2022年民营企业创造的这一万多亿美元的顺差，在任何宏观金融数据里都找不到，无论是银行的外汇存款还是结售汇数据，包括央行的外汇储备和外汇占款数据，全都不见这万亿美元的踪影。这么大一笔钱，根本不可能隐藏的啊，是必须要在宏观金融数据里体现出来的啊。现在它莫名其妙的就不见了，这到底是为什么呢？
+- - -
+在这个相对私密的区域，解释一下为什么我如此关注万亿美元失踪的事。这么说吧，这件事如果没有答案，那么2023年，我们可能就真的熬不过去了。
+
+2020-2022年我国全口径的顺差规模（包括货物贸易、服务贸易及非金融类投资）合计达到18977亿美元，但是这笔主要由民企出口挣回来的顺差资金，没有在任何宏观金融数据里体现出来。它凭空消失了！！
+
+民企申报了出口，就必须结汇回国，不结是不可能的，会被外管局整出翔。
+
+那么，近两万亿美元失踪意味着什么？意味着我们这具经济巨人的身体上，有一处相对隐秘的失血伤口，我们这三年辛辛苦苦挣的钱，全都这么流出去了。所以清零三年期内，我们的外贸形势一片大好，但是完全没能挣到钱，没有形成外汇储备或者外汇存款。甚至恰恰相反，我们的外汇流动性还非常紧张，在有近两万亿顺差的情况下，我们国内大量的民营企业因为凑不足外汇还不起外债而暴雷了！累计暴雷金额近千亿美元。
+
+这处失血伤口如果找不到，如果不堵上，继续让它这么流血的话，将会是一件非常可怕的事情。2023年的外贸形势看着就不行了，整个欧美世界都在压缩消费，对中国制造也不再欢迎。外汇收入不足了，失血还在继续。那么接下来会怎么样？
+
+第一个后果，就是外债会大面积暴雷。不仅是民营企业借的外债会暴雷，金融企业，商业银行，乃至地方政府，都发行了很多外债，都会暴雷。你们想象一下银行无法偿付外债而破产的场景，有没有感觉到恐惧？？人民币就此变成废纸。
+接下来，作为粮食和能源进口依赖性国家，我们的粮食安全和能源安全都无法得到保证了。
+
+再接下来，战争一定会爆发。
+
+如果两万亿美元失踪的问题得不到解释，漏洞不能堵上，失血继续的话，那么2023年能不能熬过去，我个人是存很大的疑问的。
