--- a/source/_posts/政府没有了公信力（微博：数据轰炸机-2023-02-10-2023-02-11）.md
+++ b/source/_posts/政府没有了公信力（微博：数据轰炸机-2023-02-10-2023-02-11）.md
@@ -2,6 +2,11 @@ title: 当政府没有了公信力（微博：数据轰炸机 2023.02.10-2023.02
 author: laoman
 date: 2023-02-11 11:55:45
 tags:
+password: lao@@man
+abstract: 联系QQ：940604023 获取密码。
+message: 您好, 这里需要密码.
+wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
+wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
 ---
 接下来我们在此V+区一点点了解三年清零的真实后果。<!--more-->
 
@@ -54,3 +59,16 @@ tags:
 再接下来，战争一定会爆发。
 
 如果两万亿美元失踪的问题得不到解释，漏洞不能堵上，失血继续的话，那么2023年能不能熬过去，我个人是存很大的疑问的。
+- - -
+清零三年的第三个代价，是城投债市场的整体塌陷。
+
+地方政府的清零支出一直是个谜。无休止的全民核酸、隔离酒店和方仓的建设与维持、大范围封控以及物资保供等等等等，总支出金额是谜，资金来源同样讳莫如深。事实上，这笔支出由公共预算资金承担的比例极少，比如广东省公共财政决算报告里体现的，一年就700来亿，这当然是不够的。大家心知肚明的资金来源，其实就是城投债。
+
+然而由城投债来承担庞大的清零支出，给地方政府带来的债务压力实在太大。三年下来，已经让地方政府的财政状态陷入了崩溃状态。2019年城投债净融资（扣除借新还旧后的净增量）规模1.23万亿，这算是正常水平。2020年就暴增到1.95万亿，2021年继续上升2.23万亿的超高规模。这每年多出来的一万亿，大概就是投入到清零大业中的支出。
+
+然而再到2022年，地方政府就承担不起如此暴增的城投债的还本付息的责任了。2022年上半年城投债净融资量9559亿，接近一万亿，看起来还行，大概按这个水平持续下去，一年下来又是两万亿的水平。然而七月份遵义债到期无法偿付，大家突然就意识到，极限已经到了。于是整个2022年下半年，城投债的净融资规模只有1940亿，较2021年同期的12977亿，降幅达到了85.1%。
+
+再到今年一月份，城投债净融资量还是只有293亿，同比降幅89.6%。考虑到一月份就是银行资金最充沛额度最饱满的时间，每年都是一开年就大幅投放。一月份城投债都是这种拉胯的表现，这事实上意味着城投债已死，有事烧纸。
+
+而对现在的地方政府来说，这只是噩梦的开始。没有了借新还旧的能力，那债应该怎么还？加大向民营企业的收税吗？
+![医保](/images/20230213001.jpg)
