--- a/source/_posts/政府没有了公信力（微博：数据轰炸机-2023-02-10-2023-02-11）.md
+++ b/source/_posts/政府没有了公信力（微博：数据轰炸机-2023-02-10-2023-02-11）.md
@@ -3,8 +3,8 @@ author: laoman
 date: 2023-02-11 11:55:45
 tags:
 password: lao@@man
-abstract: 联系QQ：940604023 获取密码。
-message: 您好, 这里需要密码.
+abstract: 内容敏感，加密获取。
+message: 您好, 这里需要密码，联系QQ：940604023 获取
 wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
 wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
 ---
