--- a/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
+++ b/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
@@ -1,4 +1,4 @@
-title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.02）
+title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.04）
 author: laoman
 date: 2023-03-02 15:02:07
 tags:
@@ -38,3 +38,21 @@ V+用户会转移到本号，不用担心。以后本号在讲正事的时候会
 事实证明，世贸模式失败了。它这套构想建立在人人都是圣人的基础之上，跟乌托邦和伊甸园的没有本质差别。自由竞争和公平贸易的前提，是那两个定语，那两个定语实现不了，这个前提根本就不可能实现。
 
 所以，现在欧美已经在旗帜鲜明的抛弃世贸模式，打算另起炉灶，再开新地图了。旧的时代，就这么过去了。
+- - -
+3.3
+
+我这些天忙死了。每天要上两个小时专业视频特效和剪辑课程，学一个小时英语，还有数学、经济学和管理学的专业书要看，还要抽出一个小时进行体能极限训练。。。。感觉我快要把自己玩残了。
+- - -
+最近值得讲述的影响世界格局的大事很多，比如史上最失败的G20会议，最后演变成了逼迫所有与会国站队的局面，大家都得在天理良心跟俄罗斯这两者之间选边站，看起来就跟一战前必须选边的情况一模一样。
+
+还有，欧美的通胀潮并没有真正缓解的迹象，甚至看起来还会更加猛烈。通胀潮从来都是战争的最大诱因，没有之一。
+
+再有，我国银行业从去年开始出现存贷款利率倒挂的危险迹象，今年前两个月，这种迹象更加明显。这种迹象如果不能迅速得到缓解，可能会诱发小微城商行的排队扑街。
+
+不过我目前不想给出任何结论。虽然我有一些自己的判断，但是我不想在目前经济复苏的成色未确定的当口误导任何人。且继续观察吧。
+- - -
+3.4
+
+今时今日，人类世界距离世界大战，只差最后扣动一下扳机而已。
+所有的客观条件都已经具备了，包括双方阵营的形成、意识形态层面和现实利益层面的激烈冲突、发展到尽头的生产力、停滞的自然科学和社会科学、快速萎缩的消费市场同时叠加通胀潮。
+而人类历史一再告诉我们：只要有一件事具备了发生的客观条件，它就一定会发生。这就是历史教会我们的唯一教训。
