--- a/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
+++ b/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
@@ -1,4 +1,4 @@
-title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.04）
+title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.06）
 author: laoman
 date: 2023-03-02 15:02:07
 tags:
@@ -58,3 +58,43 @@ V+用户会转移到本号，不用担心。以后本号在讲正事的时候会
 
 所有的客观条件都已经具备了，包括双方阵营的形成、意识形态层面和现实利益层面的激烈冲突、发展到尽头的生产力、停滞的自然科学和社会科学、快速萎缩的消费市场同时叠加通胀潮。
 而人类历史一再告诉我们：只要有一件事具备了发生的客观条件，它就一定会发生。这就是历史教会我们的唯一教训。
+- - -
+3.5
+
+开大会了，这几天我们就不谈正事了，讲各种技术流吧。
+
+我个人来说，擅长的专业技术领域分别是行政法、现金流测算和工程管理，算是三个不搭架的独立领域。不过我把这三个领域贯通起来，用于做宏观经济分析，结果十分有趣——我总是能够发现庞大的数据流里那些不和谐的数据（这就是擅长现金流测算的作用），并且总是能把这些不和谐的数据背后的问题成因给挖掘出来（工程管理的本质就是寻找问题），同时我还能提出解决问题的建议（行政法的本质就是解决问题）。
+
+将一些表面看起来完全没交集的技能融汇在一起，往往会有出人意料的化学反应。
+
+各位还有这方面的心得和案例，可以一起分享。
+- - -
+一组互联网投资的数据：
+
+2016年，我国互联网行业向全球吸纳的投资总额为332亿美元；
+
+2017年，该数据为479亿美元；
+
+2018年，该数据为697亿美元，这是行业吸纳资金的峰值，也是最风光的时刻。
+
+2019年，该数据锐减为332亿美元；
+
+2020年，该数据为361亿美元；
+
+2021年，该数据为514亿美元，这是行业最后的荣光；
+
+2022年，该数据为103亿美元，同比增幅-80.0%。
+
+互联网行业可以说基本丧失吸纳资金的能力。而我国这个行业本身的盈利能力极弱，吸纳不到投资，依靠自己的经营维持现金流的可能性基本不存在。从目前的趋势来看，2023年我国互联网行业照样吸收不到投资，尤其是来自国外的投资。
+
+所以，源于2019年，并在2022年席卷整个行业的互联网从业人员的毕业潮，还会继续
+- - -
+3.6
+
+有个道理我之前经常说，现在强调一下：国内的消费市场根本不可能承接庞大的出口产能的冲击。
+
+2022年我国出口总量折约24万亿人民币，基本上都是最终消费品，中间产品或者原材料出口量极少。有少量零部件出口，基本也是作为维修维护用途，事实上也是进入最终消费市场。
+
+2022年我国社会消费品零售总额44万亿。要在这个基础上一夜之间提升5成的消费量，吃掉出口产能，试问哪一种消费品行业可以承受？服装，每个人多买50%的衣服，穿一件扔一件？玩具，每个孩子的玩具玩两天就扔？手机规定使用年限，半年到期自动烧毁？
+
+所以，出口行业现在遭遇巨大困境，对这一事实无论怎么重视，都不过分。
