--- a/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
+++ b/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
@@ -1,4 +1,4 @@
-title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.06）
+title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.07）
 author: laoman
 date: 2023-03-02 15:02:07
 tags:
@@ -98,3 +98,17 @@ V+用户会转移到本号，不用担心。以后本号在讲正事的时候会
 2022年我国社会消费品零售总额44万亿。要在这个基础上一夜之间提升5成的消费量，吃掉出口产能，试问哪一种消费品行业可以承受？服装，每个人多买50%的衣服，穿一件扔一件？玩具，每个孩子的玩具玩两天就扔？手机规定使用年限，半年到期自动烧毁？
 
 所以，出口行业现在遭遇巨大困境，对这一事实无论怎么重视，都不过分。
+- - -
+3.7
+
+今天发布的1-2月份的外贸数据已经开始出现颓势，并且资本市场对这一趋势早有预料，导致了股市和汇市在近期的大幅波动。不过我还不打算对这组数据做出分析。我还需要等，等到4月份的数据出来。外贸数据有滞后性，现在发布的海关通关数据，反应的其实是3-6月前的订单。唯有等到4月份的数据出来，才能确定去年4季度之后真实的订单情况。
+
+各位，我们必须时刻记住，外贸是我国经济的最大支柱，以前是，现在也还是。其它任何经济部门，都没有外贸来得重要。房地产固然提供了这个国家三分之一的财政收入，看起来十分重要，但是我们整个国家的货币信用，都是建立在外贸行业之上的。
+- - -
+整理手机里的老照片，下图依次是九年前、五年前和一年前的我。
+这九年，我们见证了地产市场的两轮兴衰，见证了全球化的鼎盛和瓦解，见证了最荒谬的、最软肋的、最饥饿的人世间。庆幸的是，我还没有老去，我还能和各位一起，继续见证下去。 
+![九年前](/images/20230308001.jpg)
+
+![五年前](/images/20230308002.jpg)
+
+![一年前](/images/20230308003.jpg)
