--- a/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
+++ b/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
@@ -1,4 +1,4 @@
-title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.07）
+title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.09）
 author: laoman
 date: 2023-03-02 15:02:07
 tags:
@@ -112,3 +112,28 @@ V+用户会转移到本号，不用担心。以后本号在讲正事的时候会
 ![五年前](/images/20230308002.jpg)
 
 ![一年前](/images/20230308003.jpg)
+- - -
+3.8 **V+区 文章**
+
+这两天一件很重要的事，日韩在日益迫切的战争压力之下，平息了宿怨。韩国政府宣布自己出钱解决二战时期被日本强制奴役的劳工补偿问题，不再尝试向日本方面追讨。
+
+这个问题此前困扰日韩已久，双方还因此打起了旷日持久的贸易战，双方各说各有理。日本方面说我在1960年代就赔过很多钱，都被你们的军政府挪用了。韩国方面说那是你们的政府赔给我们的政府的，不是你们那些日本企业赔给劳工个人的，劳工个人有权要求日本企业再赔一次。总之这种历史问题根本就无解。
+
+现在日韩看着周边局势一天比一天紧张，两边再闹下去没个好，明明产业互补性超强，却非要打贸易战，相互禁止向对方提供关键技术和材料，徒令某邻国得益，现在想明白了之后，韩国把历史问题抛开，算是承认自己当年挪用补偿的事做得不对，把责任背了起来。日韩两国抛开包袱，展开从产业经济到军事的全面合作，应对现实威胁。这就在事实上形成了对某邻国的封锁线。
+
+接下来的日子，注定会越来越波澜壮阔。加油！
+- - -
+正在做第一期的视频，关于香港，我大中国的金融软肋，内容包括其财政收支、劳动人口、港币的发行、转口贸易、外汇储备变化等。涉及的数据量非常大，同时视频由我亲自操刀进行剪辑（检验我这三周的视频课学习成果）。我争取在一周内完成。
+
+我直接在这里说结论吧：港币之危，危在旦夕。我相信这个结论早已为世人所知，我这里只不过是给出充分的数据，论证这个结论而已。
+不会公开发这个视频，还是会发V+区。没法子的，各位谅解一下。
+- - -
+3.9 
+
+关于消费，今年1-2月份的餐饮和旅游消费有一定的复苏迹象，但是耐用消费品消费剧烈萎缩的趋势没变。根据乘联会及富瑞调查数据，1-2月份汽车销量同比去年同期下降20%，手机销量同比下降11%。
+
+新能源汽车1-2月的同比销量还有22%的增幅，不过跟去年那种几乎翻倍的销量增幅相比，也已经大幅度放缓。毕竟购买电动车跑网约车，也是有市场容量极限的，不能持续增长下去。回过头来，如果连新能源汽车销量都不再增长， 那汽车市场整体会更惨烈。
+
+手机销量去年1-2月份已经是同比下跌三成了，今年继续跌，这意味着大家越来越不愿意换手机了，凑合着用呗。穷人没资格换手机。
+
+这大概就是目前的现状吧。一次过的体验型消费目前来说有一些复苏，大家伙憋了三年出来玩玩，但是耐用消费品越来越没人买了。现在家电行业1-2月的销售数据还没有全部放出来，从一些周报数据来看都是两成左右的降幅。总之耐用消费品行业，今年的日子不会好过了。
