--- a/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
+++ b/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
@@ -1,4 +1,4 @@
-title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.09）
+title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.13）
 author: laoman
 date: 2023-03-02 15:02:07
 tags:
@@ -137,3 +137,48 @@ V+用户会转移到本号，不用担心。以后本号在讲正事的时候会
 手机销量去年1-2月份已经是同比下跌三成了，今年继续跌，这意味着大家越来越不愿意换手机了，凑合着用呗。穷人没资格换手机。
 
 这大概就是目前的现状吧。一次过的体验型消费目前来说有一些复苏，大家伙憋了三年出来玩玩，但是耐用消费品越来越没人买了。现在家电行业1-2月的销售数据还没有全部放出来，从一些周报数据来看都是两成左右的降幅。总之耐用消费品行业，今年的日子不会好过了。
+- - -
+3.10
+
+今天只合适谈八卦。话说现在这一代女演员，骨子里能透露出性感妖娆气质的，已经十分稀少了。强做性感状的时候，整体都透着一股土气，就好像一开口的自我介绍就是：“你好我是8号来自重庆。”
+- - -
+3.11
+
+在我国，口红效应逐渐消失，取而代之的是火锅效应。以前是经济不好女士们就买只口红改善心情，现在就是去吃顿火锅，尤其是网红火锅，而且必须是重口味的麻辣火锅。
+
+2021年化妆品市场总销量还有14%的增幅，2022年小幅下跌4%，行业都在期待解除管控之后的复苏。结果到了今年，火锅确实复苏了，然而化妆品市场扑街了。从目前截至三月上旬的主要品牌网络销售数据来看，跌幅普遍大幅超过10%，大部分品牌的跌幅在20%以上。
+
+我估摸着火锅效应这个词很快就要写进老外的经济学教科书了。我们这边不会。
+- - -
+3.12
+
+现在汽油车的日子不好过，包括各品牌的合资车都处于水深火热之中，销量基本上都处于腰斩状态。我个人对此的态度是：活该。
+
+中国合资车比国外一直贵太多了，帕萨特的相同车型，我国比国外起码贵四成。福特在美国的地位基本就是柳州五菱这种平民车企，在我国搞的每款合资车型，都敢比美国贵一倍。
+这么说吧，在欧美两万块美元可以买到奔驰商务系的车，在国内合资车企，只能买四个轮子。
+
+在所有耐用消费品领域，汽车行业是唯一一个国内售价大幅超出国外的，这么多年毫无变化，各合资车企就是这么固执的挣着超额利润，简直令人匪夷所思。
+挣了这么多年昧良心的钱，现在日子不好过了，活该啊。现在售价打对折，这才是应该的啊，这才符合市场定价的基本原理啊！！你都是合资车了，你在我国生产了，你成本绝对比国外下降了，你还比国外售价高出一大截？？恨不得售价翻倍？？你特么是不是觉得中国消费者太好欺负了？
+
+这几年中国人的消费能力被房地产吞噬干净了，合资车企越来越吸不到血了，不过售价一直还在硬挺着。这几天东风开始打骨折卖车，这算是恢复正常定价的开始。
+
+老实说，也就是特斯拉一直厚道，国内国外售价基本一致，甚至国内还稍便宜一点。要按其它合资车企的玩法，一台配置最烂的特斯拉，也得卖八十万朝上才对，这才是车企的烂尿性。
+- - -
+我对出口行业有一个整体判断：说大数的话，目前我国出口规模约3万来亿美元，其中外资企业的出口规模约1万亿美元出头。
+
+外资企业未来仅会保留其用于我国内市场的产能，占其总产能的比值约六成多一点。其出口产能会迅速转移到东南亚、东欧和南美，或者干脆直接关停。因此外资企业创造的这一万亿美元出口，会迅速下降。我们最好现在就接受外资企业以后不再承担出口重任的现实，我相信这个周期不会超过三年，刚好一个大型企业的中期计划的执行周期。
+
+希望我国能尽快消化这整个过程带来的冲击，不给国人带来太大的苦痛。
+- - -
+V+区
+
+2018年，国家统计局干了一件石破天惊的事：由于当年度有大量的工业企业扑街，于是国家统计局在统计2018年规模以上工业企业总利润增幅的时候，悍然宣布要回过头去，把2017年的原始利润数据里，那些在2018年破产企业的原始利润数据删减掉。分母减少了，自然就有了正增幅。
+
+也就是说，总利润这种总盘子概念，一个汇总数据，根本就不需要追踪盘子里的个体是否前后一致。然而国家统计局居然还可以把它当成微观概念，对原始汇总数据根据个体变化情况做调整！
+
+使用这种往回调减原始数据的方法，国家统计局成功实现了工业企业利润连续大涨的经济奇迹。
+
+从那时候开始，工业企业利润数据就不能看了，被严重污染了。这个国家值得追踪的重大经济数据，又少了一个。
+在当时，国家统计局因为此事跟我打了一个多月的骂仗，最后把我全网封杀了事。
+【图文相关】【还是发V+吧】
+![统计局数据](/images/20230313001.jpg)
