--- a/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
+++ b/source/_posts/另起炉灶（微博：老蛮频道-2023-02-27-2023-03-02）.md
@@ -1,4 +1,4 @@
-title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.13）
+title: 另起炉灶（微博：老蛮频道 2023.02.27-2023.03.14）
 author: laoman
 date: 2023-03-02 15:02:07
 tags:
@@ -182,3 +182,45 @@ V+区
 在当时，国家统计局因为此事跟我打了一个多月的骂仗，最后把我全网封杀了事。
 【图文相关】【还是发V+吧】
 ![统计局数据](/images/20230313001.jpg)
+- - -
+**V+区**
+
+3.13
+
+美国财政部出手给硅谷银行的存款客户买了单，存款安全都由财政部兜底。同时美联储宣布以后所有银行手里持有的债券都可以按面值卖给美联储。
+
+呵呵呵。首先这种财政部和美联储给破产银行兜底的行为，本质上就是无锚印钱，与去年以来的美联储的缩表操作完全是背道而驰，一定会加剧通胀。
+
+其次，有了美联储按面值收购债券的承诺，美联储就成了整个金融市场最大的二逼。你美联储凭什么按面值收？债券跌穿面值的情况才是常态，你承诺按面值收，你美联储就是整个债券市场的托底人吗？金融市场只要出现一个托底人，那一定会被疯狂套利，不把这个托底人榨干，那就对不起金融规律！
+
+所以，我们接下来继续看戏就好了。
+- - -
+3.14
+
+到现在这一刻，还有多少人不相信金融危机已经到来了呢？
+
+我们这边，脆弱的城商行和农商行系统，但凡积压了太多资金在房地产领域和地方债领域的，随时都可以爆出大雷，并且已经爆出了大雷。
+
+美国那边，每一家银行都被美联储加息加得欲仙欲死，经营收益率根本就不可能追上美联储加息的速度，所以每一家都面临客户挤兑的高风险。
+
+然而我们这边有办法应对吗？房地产领域再来一次涨价去库存？地方债停止发行？美国那边有办法应对吗？停止加息并无锚印钞救银行，放任通胀潮继续汹涌？
+
+没有办法。人类在历史上的任何一次金融危机面前，都没有办法应对。即便战争，也不是解决问题的办法，只不过是以人命的代价来拖延问题而已。
+
+解决问题，唯有期待科技突然爆发，人类出现真正的第三次能源革命。不过这就更加虚无缥缈了，还不如指望战争拖延时间呢。
+- - -
+**V+区**
+
+来说一段总是为世人忽略的常识：
+
+对任何经济体来说，最重要的事情，就是确保现金流稳定，就是保证流动性充裕。这个世界99%的破产案例都不是因为资不抵债，无论是个人、企业还是政府，破产大都不是因为总资产不足以还债，而是因为手里没有现钱，无法偿付当期债务。所谓三文钱难倒英雄汉，守着家里的亿万豪宅，硬是掏不出10块钱买碗面吃，这就是破产的本质。
+
+不要觉得委屈，破产的游戏规则就是如此。恒大、华夏幸福和融创，它们真的资不抵债了吗？恰恰相反，它们手里有着规模庞大的硬资产，以平方公里计算的土地和以千万平米计算的物业，如果折算成现金，完全可以覆盖它们的债务。然而没有用处。它们手里硬是掏不出足够的现金，一堆硬资产就是没法快速变现为现金，所以它们只能眼睁睁的违约，眼睁睁的看着楼盘烂尾，优质资产一步步变成垃圾资产，黯然扑街。
+
+现在美国的银行问题也是一样的。它们真的资不抵债了吗？当然不是。它们手里还拿着一大堆的各种债券，如果可以快速变现，那足以解决所有问题。但是没有如果。变现不了就是变现不了，现金不足就是硬伤，本来就该死。这没什么可委屈的。如果这都可以算委屈，恒大们不委屈吗？这么多年以来破产的国家，维瑞内拉不委屈吗？斯里兰卡不委屈吗？如果我国央行出面救助恒大，向恒大输出流动性，那骂声会有多大？影响会有多恶劣？
+
+美联储现在向各扑街之中的银行无底线的输入流动性，真的是不需要付出代价的吗？所谓银行股东不能再提取利润，这种所谓的救助时的惩罚有意义吗？银行这种东西，股东的出资都少得可怜，相对于其总资产而言基本上都可以忽略不计。
+
+向丧失流动性的银行输入流动性，本质上就是无锚印钞，就是向全社会注入更多的流动资金，就是放水。这没什么可辩解的，这恰恰就是加剧通胀的最大杀器。美联储在这里注入的每一块钱美元，都是基础货币，都将被放大至少四倍，由全世界一起承担通胀的后果。
+
+我再重复一次我的观点：人类没有任何办法应对已经发作的通胀潮，要么通胀本身导致经济坍塌，要么加息导致经济坍塌。就这样。
