--- a/source/_posts/继续过紧日子（微博：老蛮频道-2023-03-18-2023-03-21）.md
+++ b/source/_posts/继续过紧日子（微博：老蛮频道-2023-03-18-2023-03-21）.md
@@ -1,4 +1,4 @@
-title: 继续过紧日子（微博：老蛮频道 2023.03.18-2023.03.21）
+title: 继续过紧日子（微博：老蛮频道 2023.03.18-2023.03.24）
 author: laoman
 date: 2023-03-22 05:58:26
 tags:
@@ -99,3 +99,37 @@ AI的话题最近被炒得很热。对这个领域，我一直保持着高度关
 2、政府性基金支出12493亿，同比下降11%。这里简单说明一下，政府性基金支出是地方政府基层公务人员福利待遇的最大来源，也就是靠卖地给基层公务人员发工资发奖金，现在这笔支出显著下降，公务人员当然确实在过紧日子了。
 
 3、如果税收情况和卖地情况接下来无法好转，那么，就到了考验政府公务人员是不是会把罚款扩大化的时候了。
+- - -
+3.22
+
+全世界的金融圈今天都等着看热闹，美联储到底还要不要加息，加多少。以前大家都说，不要和美联储作对。现在大家都等着看，美联储敢不敢跟市场作对。
+- - -
+嘲笑一下：广州那些基于投资炒房目的买了增城从化南沙房子的，深圳那些基于相同目的买了中山惠州房子的，现在他们的房子砸在了手里，应该可以深切理解“无效资产”这个词了。
+
+本条可用于嘲笑全国范围内那些千里迢迢去炒荒郊野外房子的傻蛋。
+- - -
+3.23
+
+美联储害怕了。不好玩。
+
+好吧，美联储已经被确定搞不定通胀了，它根本就没有传说中的工具包。事实上人类社会进展到现在，社会科学发展到现在，对于通胀根本就没有任何有效的应对工具可言。“工具包”？那都是装逼。
+
+换个视野。在美联储搞不定通胀的同时，另外的大国能搞定地产坍塌、出口与消费同时萎缩带来的债务炸弹暴雷的危险吗？
+- - -
+3.24 **V+区**
+
+一组十分有趣的的数据，可惜不能公开发：
+根据《中国的对外援助白皮书2011》，从建国以来截至2009年底，中国累计对外提供援助金额为2563亿元人民币，其中无偿援助1062亿元，无息贷款765亿元，优惠贷款736亿元。
+
+根据《中国的对外援助白皮书2014》，2010年至2012年，中国对外援助金额为893亿元人民币。其中无偿援助323亿元，无息贷款73亿元，优惠贷款498亿元。
+
+根据《新时代的中国国际发展合作白皮书2021》，2013年至2018年，中国对外援助金额为2702亿元人民币，其中无偿援助1278亿元人民币；无息贷款113亿元人民币，；优惠贷款1311亿元人民币。
+
+合计起来，自建国以来截至2018年，我国对外援助总金额为6158亿人民币（累计不到一千亿美元，看起来也还好）。其中无偿援助2663亿，占比43%；无息贷款951亿，占比15%；优惠贷款2545亿，占比41%。
+
+根据上述文件的共同描述，这些援助总金额的主要投向确实是非洲。
+- - -
+中美之间的友谊早已消失，现在双方之间充满了不信任。这边就怀疑那边虐待年迈的大熊猫，连续虐了20多年；那边就怀疑这边在APP里埋雷，意图盗取信息。
+两边无论怎么解释都没用。
+
+一旦不信任的氛围形成，确实无论怎么解释都没用。脱钩势在必行，无论两边付出多大的代价，都必须脱钩。这就是现实。必须接受的现实
