--- a/source/_posts/继续过紧日子（微博：老蛮频道-2023-03-18-2023-03-21）.md
+++ b/source/_posts/继续过紧日子（微博：老蛮频道-2023-03-18-2023-03-21）.md
@@ -1,4 +1,4 @@
-title: 继续过紧日子（微博：老蛮频道 2023.03.18-2023.03.24）
+title: 继续过紧日子（微博：老蛮频道 2023.03.18-2023.03.26）
 author: laoman
 date: 2023-03-22 05:58:26
 tags:
@@ -133,3 +133,21 @@ AI的话题最近被炒得很热。对这个领域，我一直保持着高度关
 两边无论怎么解释都没用。
 
 一旦不信任的氛围形成，确实无论怎么解释都没用。脱钩势在必行，无论两边付出多大的代价，都必须脱钩。这就是现实。必须接受的现实
+- - -
+3.25 
+
+总结一下现在的形势：
+
+饿乌战争目前处于很无趣的双方各自蓄力阶段。乌需要重新训练士兵适应欧美方面提供的重武器系统；饿则把手上的老兵打光了，也需要重新休整和喘息，同时也需要适应某大国提供的运输系统、无人机系统和海量后勤物资。看情况最多还有一个月，两边就差不多休整完毕了。谈判窗口就剩这一个月，接下来如果谈不到一块去，当然就会再次大打出手，并且这次双方都解决了短板——乌解决了武器短板，饿解决了后勤运输和无人机短板，战争烈度必然会大幅超过前一阶段。
+
+我国和美国之间的关系彻底破裂。双方都在不惜代价的脱钩之中，都在拼命往对方身上泼污水。在这种背景下，我建议各位如果要出去欧美留学，那就不要想着做海龟回来就业了。留学的学位以后不值钱了，大概率还会反过来受歧视。
+
+欧美对我国的技术封锁在进一步强化，我相信很快就会从芯片技术领域延伸到材料技术等精细技术领域。这一趋势不可阻挡。如果从事相关行业的话，做好被彻底踢出全球技术阵营的准备。
+
+说回国内。房地产在一二月份看起来有一丁点的复苏迹象（就只有一丁点那么多），市场成交量看起来多了一丁点。到现在三月下旬，复苏迹象戛然而止。原因在于趁着成交有了一丁点的量，地产商拼命的推盘，二手房东也拼命的挂牌，于是就把潜在买家吓跑了，如果真的还有这个潜在买家的话。
+
+到现在这一刻，真正称得上复苏的，依然只有年轻人追捧的网红麻辣火锅，以及退休老年的组团旅游。就这两样，多一样都数不出来。
+- - -
+3.26
+
+一天天的我国对外宣传都特么在搞什么辣鸡玩意。美国动物园虐国宝这种低级扯淡也就算了，东南亚各国都瞄准了中国游客的腰子这种扯淡到别致的辣鸡到底是怎么流行开的？就为了阻止国人再出国旅游节省外汇？？有必要这么乱抹黑东南亚各国吗？有意思吗？ 
