--- a/source/_posts/继续过紧日子（微博：老蛮频道-2023-03-18-2023-03-21）.md
+++ b/source/_posts/继续过紧日子（微博：老蛮频道-2023-03-18-2023-03-21）.md
@@ -1,4 +1,4 @@
-title: 继续过紧日子（微博：老蛮频道 2023.03.18-2023.03.26）
+title: 继续过紧日子（微博：老蛮频道 2023.03.18-2023.03.28）
 author: laoman
 date: 2023-03-22 05:58:26
 tags:
@@ -150,4 +150,30 @@ AI的话题最近被炒得很热。对这个领域，我一直保持着高度关
 - - -
 3.26
 
-一天天的我国对外宣传都特么在搞什么辣鸡玩意。美国动物园虐国宝这种低级扯淡也就算了，东南亚各国都瞄准了中国游客的腰子这种扯淡到别致的辣鸡到底是怎么流行开的？就为了阻止国人再出国旅游节省外汇？？有必要这么乱抹黑东南亚各国吗？有意思吗？ 
+一天天的我国对外宣传都特么在搞什么辣鸡玩意。美国动物园虐国宝这种低级扯淡也就算了，东南亚各国都瞄准了中国游客的腰子这种扯淡到别致的辣鸡到底是怎么流行开的？就为了阻止国人再出国旅游节省外汇？？有必要这么乱抹黑东南亚各国吗？有意思吗？
+- - -
+3.27
+
+我一再说过，工业利润数据被国家统计局污染得非常严重，把“同比”这个词都给糟蹋了。这组数据的指导意义已经完全丧失。今年利润才开始暴跌？前年去年大宗商品价格暴涨，企业成本因此大幅上升，但终端消费售价纹丝不动，统计局却宣称当时企业利润大涨，为什么？
+- - -
+日本入侵我国东北是1931年的918事变，虽然中日战争是二战的重要组成部分，但是这个时间并不被认为是二战的起点。要到八年之后的1939年，德国入侵波兰，才被视为二战爆发的正式起点。
+
+2022年初鹅入侵乌，也不被视为三战的起点。考虑到现在已经进入信息时代，世界的变化频率大幅超过1930年代，加速了三倍左右吧。所以我认为从现在开始算，不需要再等七年了，最多也就还有个一年半吧。
+- - -
+3.28
+
+宏观经济数据要完全作假，要完全掩盖数据的真相，是不可能的。数据之间的勾稽关系构成一个庞大的系统，各政府部门相互之间也不相统属，根本不可能做到逻辑一致的作假。
+所以，我把国家外汇管理局近十年的国际收支平衡表、国际投资头寸表、直接投资与证券投资时间序列表全部整理出来进行交叉比对，把数据的不协调之处逐一挖掘出来进行分析，再与海关、央行和商务部近10年的数据进行交叉比对。于是，我就知道了，1.9万亿外汇都去哪里了。
+【对，这还是一条预告】
+- - -
+首先，媒体姓党，取消调查记者。大小事项一律只能发通稿。
+
+然后，民营企业家被系统性的污名化，资本成为贬义词。
+
+然后，一大群企业家锒铛入狱。
+
+然后，资本出逃，产业外迁，两万亿美元不翼而飞。
+
+现在，一切锅推给自媒体，声称是自媒体导致了这一切。
+
+自媒体背不动这锅。不客气。 
