--- a/source/_posts/政绩（老蛮频道-2023-04-05）.md
+++ b/source/_posts/政绩（老蛮频道-2023-04-05）.md
@@ -1,4 +1,4 @@
-title: 政绩（老蛮频道 2023.04.05）
+title: 政绩（老蛮频道 2023.04.05-2023.04.07）
 author: laoman
 date: 2023-04-06 06:04:54
 tags:
@@ -6,3 +6,7 @@ tags:
 我对当下的一些政绩观极其厌恶。<!--more-->建超高层写字楼为啥会是一种政绩？建五星级酒店怎么就造福一方了？动辄十万平米起步的商业中心，对城市真的有什么用处吗？十车道的景观大道，一河两岸景观带，旧城区贴新外立面，这些烂玩意为什么会成为公认的政绩？并成为升官的最大凭据，没有之一？
 
 为什么政绩不是当地的制造企业新增了多少工人，工人平均工资提升了多少比例？为什么政绩不是留守儿童与家人团聚的比例？为什么解救被锁了20年的被拐妇女不是政绩？为什么协助资金链即将断裂的企业重获生机不是政绩？
+- - -
+04.07
+
+所以铁链女现在被放出来了没？还是依然处于被拘禁状态，只不过拘禁她的主体变了？她被铁链锁了十几年结果突然变美了的医学谜团解开了没有，中科院没有继续深入研究去拿诺贝尔医学奖吗？
