--- a/source/_posts/可怜的港币（微博：老蛮频道-2023-04-08-2023-04-09）.md
+++ b/source/_posts/可怜的港币（微博：老蛮频道-2023-04-08-2023-04-09）.md
@@ -6,7 +6,7 @@ tags:
 提个问题。<!--more-->如果将变法做到极致的商鞅该死，那么，坚决拒绝变法导致楚国被屠杀了九成人口的屈原，又该不该死呢？
 - - -
 
-今天发完商鞅篇，我其实是有很多问题可以和大家讨论的。但是在公开区无法讨论，那就在V+区和各位讨论吧。
+今天发完商鞅篇，我其实是有很多问题可以和大家讨论的。但是在公开区无法讨论，那就在**V+区**和各位讨论吧。
 
 商鞅的问题，是把集权做到了极权的程度。中央集权在当时来说，当然是必须的，不得不为的。原始部落体制缺乏动员能力，也无法实现组织内部的资源共享和调剂，效率是极其低下的。在当时的生产力水平之下，集中资源和力量，是必须的。
 
