--- a/source/_posts/可怜的港币（微博：老蛮频道-2023-04-08-2023-04-09）.md
+++ b/source/_posts/可怜的港币（微博：老蛮频道-2023-04-08-2023-04-09）.md
@@ -6,7 +6,7 @@ tags:
 提个问题。<!--more-->如果将变法做到极致的商鞅该死，那么，坚决拒绝变法导致楚国被屠杀了九成人口的屈原，又该不该死呢？
 - - -
 
-今天发完商鞅篇，我其实是有很多问题可以和大家讨论的。但是在公开区无法讨论，那就在**V+区**和各位讨论吧。
+今天发完商鞅篇，我其实是有很多问题可以和大家讨论的。但是在公开区无法讨论，那就在V+区和各位讨论吧。
 
 商鞅的问题，是把集权做到了极权的程度。中央集权在当时来说，当然是必须的，不得不为的。原始部落体制缺乏动员能力，也无法实现组织内部的资源共享和调剂，效率是极其低下的。在当时的生产力水平之下，集中资源和力量，是必须的。
 
@@ -26,31 +26,4 @@ tags:
 
 麻烦的是，这笔人民币资金到了香港，稍微停留个保险期，期满就会换成美元继续往外跑。我看我国政府和香港政府，已经对这种保险业务恨得牙都痒了，已经严厉限制好几回了，估计很快就要把这业务给彻底停了。
 
-![港币汇率](/images/20230410001.jpg)
-- - -
-我国的出口格局大致是这样的：民营企业出口占比三分之二，主要是服装鞋袜玩具等低附加值产品。外资企业出口占比三分之一，主要是电子类高附加值产品，尤其是台资企业，出口能力非常强。
-
-国有企业创造的出口低得可以忽略不计。
-
-民营企业的出口产品，要转移产业链到东南亚和墨西哥其实一点都不难，我们所谓的完整产业链优势不算什么优势，人家真把相关产业链搞出来也花不了两年，现在大家都有非常丰富的产业链布局经验了，你凑个螺丝我凑个轴承，产业链就出来了。
-
-外资企业的出口产品，人家早就在往外转移了。尤其是台资企业，这个没办法的，人家早被我们吓尿了，留不住的。
-
-所以我们可以怎么办呢？做大国企，让国企承担起此前四十多年都承担不起来的出口重任？
-- - -
-4.9
-
-美国众议院先是决议我国不再是发展中国家，而是发达国家，要求美国政府以后在所有由其主导的国际协议中取消中国的发展中国家待遇；紧接着又要彻查我国官员及其家庭的在美财产。我觉得必须对等报复啊，我们也停止美国的贸易优惠待遇，并彻查美国官员在我国的财产吧[怒]
-- - - 
-任何事情都是有代价的。
-
-![可怜的港币](/images/20230410002.jpg)
-
-![可怜的港币](/images/20230410003.jpg)
-
-![可怜的港币](/images/20230410004.jpg)
-
-![可怜的港币](/images/20230410005.jpg)
-
-![可怜的港币](/images/20230410006.jpg)
 
