--- a/source/_posts/可怜的港币（微博：老蛮频道-2023-04-08-2023-04-09）.md
+++ b/source/_posts/可怜的港币（微博：老蛮频道-2023-04-08-2023-04-09）.md
@@ -1,4 +1,4 @@
-title: 可怜的港币（微博：老蛮频道 2023.04.08 - 2023.04.09）
+title: 可怜的港币（微博：老蛮频道 2023.04.08 - 2023.04.11）
 author: laoman
 date: 2023-04-10 06:58:40
 tags:
@@ -25,5 +25,24 @@ tags:
 前两周突然冒出一通传言惑众，说香港有些银行周末也加班，是因为欧美资金不分昼夜疯狂涌入香港，吸引了很多财经媒体兴冲冲的去探班，结果发现，这些银行基本都是冷冷清清，有的一些零星业务，也是有那么几个大陆客户周末过去交保险费。那么大陆客户为啥要买香港的保险？因为这是中产阶层把人民币资金转移到香港的最好方式，没有之一。大资金靠买几十上百万块钱的保险是不够出去的，中产其实差不多够了。
 
 麻烦的是，这笔人民币资金到了香港，稍微停留个保险期，期满就会换成美元继续往外跑。我看我国政府和香港政府，已经对这种保险业务恨得牙都痒了，已经严厉限制好几回了，估计很快就要把这业务给彻底停了。
+- - -
+4.10
 
+追踪央行的资产表演变。自加入世贸以来，外汇占款比例与对商业银行的债权，一直呈现此消彼长的趋势，并决定了人民币的信用情况。
 
+外汇占款，也就是央行兑换外汇形成的基础人民币，其占央行资产的比例，2000年仅37.6%，到2011年就上升到80%以上，外汇占款自此替换掉了此前占据优势的对商业银行债权，成为了央行的绝对优势资产。当然了，这笔外汇资产，也就是美元资产，是人民币确立信用的最关键因素，没有之一。人民币汇率因此迅速站稳，并持续走强。
+然而2015年股灾后外汇流出，央行资产中的外汇占款比例急速下降，到2022年已经下降到51.8%，仅微高于五成。而对商业银行的债权（即央行借钱给商行）比例则迅速上升，从2015年的8.4%，到2022年已经上升到了34.3%。
+
+外汇资产是优质资产，是对人民币信用的强有力的保障，对此我们很容易就能理解。而对商业银行的债权，央行借给商业银行的那些MLF\SLF之类，优质吗？有保障吗？信用程度高吗？
+
+我直接给出预判吧：一旦外汇占比比例降至50%以下，货币信用危机就爆发了。
+
+![20230411001](/images/20230411001.jpg)
+- - -
+4.11
+
+12点之后突然冒出一大摊货，说国企才是出口的主力，指责我前面有一条微博污蔑了国企。好吧，下表来源于海关月报数据。国企的出口能力，，，呵呵，呵呵，呵呵哒。
+
+![20230411002](/images/20230411002.jpg)
+- - -
+明天从香港回广州后，我打算把清零三年的代价进行一次完整的总结，做成视频，嘿嘿嘿，大家一起爽一下。
