--- a/source/_posts/内卷之下，必无净土（微博：老蛮频道-2023-04-12）.md
+++ b/source/_posts/内卷之下，必无净土（微博：老蛮频道-2023-04-12）.md
@@ -3,7 +3,7 @@ author: laoman
 date: 2023-04-13 07:12:09
 tags:
 ---
-此为视频，以下三个平台都有原视频。
+此为视频，以下三个平台都有原视频。<!--more-->
 
 推特：**老蛮频道**
 
@@ -19,3 +19,36 @@ tags:
 现在时间已经到了四月中旬，从目前所执行的经济政策来看，这一针春药已经打下去了。
 
 也就是说，我国所谓的政策库里，其实空空荡荡的，用来用去也就是从08年开始的吹大债务泡沫那一套，如此，而已。
+- - -
+4.13
+
+我们来建立几个基本逻辑：
+第一，美国从来都没有打压第二名的国策，民主党和共和党都没有这种既定策略，没有任何可执行性。美国也没有通过广场协议打压日本的意图，汇率本身甚至都不可能成为一种金融武器。
+
+第二，我们加入世贸时的44条书面承诺，仅履行了一半。
+
+第三，2010年代之后，整个欧美世界都对我国继续履行入世承诺提出了多次督促。在每一次发生关于具体品类的商品倾销等贸易争端时，都会涉及到我国入世承诺的履行问题争议。
+
+第四，即便2018年中美贸易战正式开打之后，欧洲依然在尝试督促我国真正履行入世协议，而不愿意加入美国的阵营。乃至恰恰相反，欧洲与美国之间因为钢铝关税问题开始了持久的互怼模式。
+
+第五，2022年初鹅入侵乌，让整个欧美世界丧失了安全感，携手应对强敌成为了最高需求。拜登趁此机会化解了钢铝关税争议，并将欧洲拉入了美国那一边。
+
+第六，到今年初，欧美联合封锁中国的阵营已经成型。在外交上有着反骨传统的法国政府想要火中取栗，在广交会前夕过来中国占点贸易上的便宜，结果发现完全占不到。法国商贸领域的领袖们在此问题上也不支持政府。
+- - -
+海关总署发布的进出口数据，以美元计价的一季度出口规模8218亿，基本持平去年一季度的8209亿。外贸的增长性很确定的没有了。不过就像我开年的时候就说过的，我还是不打算对这组数据进行任何详细分析。外贸数据有滞后性，去年四季度的外贸订单，反应到海关数据上，会有3-6个月的延迟。4月份的数据出来之后再说吧。
+- - -
+整个汽车行业1季度的出口只有214亿美元，少得可怜，这还包括了挖掘机这类工程车辆的出口。这种数据相对于8千多亿的总出口规模来说根本不算什么，对大局毫无影响。
+- - -
+说了我对一季度的外贸数据兴趣不大，不过你们显得特别重视似的，还有人觉得特别牛逼似的，说我们的出口结构都升级了呵呵。行吧，简单的列举一下主要出口目的地，见下表。
+
+对传统欧美发达国家的出口全部扑街，无一例外。
+
+对东盟的出口大增，出口的主要是半成品，在东盟完成最后组转，由此规避欧美各国对我国的进口排斥。
+
+对鹅的出口大增，不解释。不过鹅的外贸能力十分有限，总金额十分有限。
+
+那么，最简单的问题：请问，这组数据反应出来的外贸结构是可以长期持续的吗？对欧美发达国家的出口毫无疑问将会持续萎缩，对东盟出口半成品的模式能维持多久？鹅能进多少东西？这种模式下的数据，能稳定到本月底吗？
+
+至于其它方面的数据，包括我们实际吸纳的外汇金额已经剧烈下降，叠加此前三年的外汇失血管道并未被堵上等等这些因素，我现在懒得分析。四月份的数据出来后，就算做分析也不会放在公开区。就这样。
+
+![20230414001](/images/20230414001.jpg)
