--- a/source/_posts/内卷之下，必无净土（微博：老蛮频道-2023-04-12）.md
+++ b/source/_posts/内卷之下，必无净土（微博：老蛮频道-2023-04-12）.md
@@ -1,4 +1,4 @@
-title: 内卷之下，必无净土（微博：老蛮频道 2023.04.12）
+title: 内卷之下，必无净土（微博：老蛮频道 2023.04.12-2023.04.14）
 author: laoman
 date: 2023-04-13 07:12:09
 tags:
@@ -52,3 +52,34 @@ tags:
 至于其它方面的数据，包括我们实际吸纳的外汇金额已经剧烈下降，叠加此前三年的外汇失血管道并未被堵上等等这些因素，我现在懒得分析。四月份的数据出来后，就算做分析也不会放在公开区。就这样。
 
 ![20230414001](/images/20230414001.jpg)
+- - -
+海关总署发布的进出口数据，以美元计价的一季度出口规模8218亿，基本持平去年一季度的8209亿。外贸的增长性很确定的没有了。不过就像我开年的时候就说过的，我还是不打算对这组数据进行任何详细分析。外贸数据有滞后性，去年四季度的外贸订单，反应到海关数据上，会有3-6个月的延迟。4月份的数据出来之后再说吧。
+- - -
+4.14
+
+给几个建议吧：
+
+不要借债，不要借债，不要借债！
+
+不要扶摔倒的老人。
+
+不要见义勇为，不要见义勇为，不要见义勇为！
+
+留学生不要回国，有再大的职业诱惑也不要回国。
+
+掌握一门手艺，做饭修水管单车编草帽都算。 
+- - -
+有时候真的觉得十分荒诞。马克龙来中国，争议焦点居然是“台海危机”，他回国后还就欧洲在此问题上是应该无脑站美国还是保持外交独立性跟整个欧洲政坛爆吵一架，马克龙居然还吵输了。紧接着德国外长来中国，讨论的核心问题居然还是“台海危机”，德国明确要求我国在台湾问题上保持克制。所以这是闹哪样？？？台海危机居然是可以在国际外交层面公开讨论的问题了？？各国还必须站队了？？？这个危机已经是必然会变成现实了吗？？？？
+- - -
+形势一派大好。又赢了。中国经济是没问题的。打死那个说真话的。闭上眼睛就是晴天。不跟人打架难道要跪下吗。看到祖国这么强大我就放心了。
+- - -
+很有意思。
+
+2016年我说房地产再这么吹泡沫吹下去，必然吹出史无前例的债务风暴，让整个国家都无法承受。当时愿意相信这一判断的，一百个人里面都没有一个。好吧，现在我的判断应验了，当然这不是因为我高瞻远瞩，只不过是资产泡沫必然破灭的常识而已。
+
+现在我说了两句出口行业非常艰难无法维系，关键这话甚至都可以算是行业共识，出口行业以及相关行业叫苦连天，航运和公路运输运费都在大幅下跌，就这样，就引来一大群小粉红誓死捍卫我国天下无双的出口形势。
+
+行吧，我对一季度出口形势到底好不好毫无立场。爱咋咋地呗，这个领域的情况跟2016年的房地产繁花似锦根本就不是一码事。出口相关领域的从业人员正在水深火热之中挣扎，商务部和发改委一会儿给一个解困政策和扶持意见，官方都急得够呛，哪里还需要我给什么预警。
+
+就这样呗，挺好的。
+- - -
