--- a/source/_posts/内卷之下，必无净土（微博：老蛮频道-2023-04-12）.md
+++ b/source/_posts/内卷之下，必无净土（微博：老蛮频道-2023-04-12）.md
@@ -1,4 +1,4 @@
-title: 内卷之下，必无净土（微博：老蛮频道 2023.04.12-2023.04.14）
+title: 内卷之下，必无净土（微博：老蛮频道 2023.04.12-2023.04.17）
 author: laoman
 date: 2023-04-13 07:12:09
 tags:
@@ -82,4 +82,22 @@ tags:
 行吧，我对一季度出口形势到底好不好毫无立场。爱咋咋地呗，这个领域的情况跟2016年的房地产繁花似锦根本就不是一码事。出口相关领域的从业人员正在水深火热之中挣扎，商务部和发改委一会儿给一个解困政策和扶持意见，官方都急得够呛，哪里还需要我给什么预警。
 
 就这样呗，挺好的。
+- - -
+4.16
+
+个人对我国今年至今的所有经济及社会治理政策均持否定态度。
+包括但不限于鼓励大众买房、鼓动地摊经济、鼓动大学生下乡、芯片大会战、净网行动、退林还耕、民营企业家可不抓的不抓等等。
+这么多年以来，这是个人第一次在四月份中旬就如此明确的表示否定。
+
+如果这都能应对经济危局，那人类近三百年的经济学教科书将全部重写，每一个字都会被我国这四个月的实践给颠覆掉。
+- - -
+4.17
+
+香港外汇呈现清晰的继续流出迹象。截至今天，香港用于捍卫联系汇率的弹药之一，银行系统收市总结余，已经下降到572亿港币，较去年底的963亿港币，几乎腰斩。而较2020年底的峰值4575亿，更是只剩下了一个零头。
+
+当然了，本来按趋势，这笔弹药应该在去年四季度就耗尽，不过去年下半年大陆这边不计代价的打了一场气势恢宏汇率保卫战，顺带保护了港币汇率，减少了香港当局的弹药消耗。现在大陆这边打不太动了，香港直接面对炮火，弹药因此消耗极快。
+
+收市总结余消耗完，接下来就是直接消耗香港的外汇储备，3月底是4307亿美元，也是从2020年的峰值4916亿美元一步步降下来的。当然了，四千多亿美元的外汇储备看起来好像很多，不过其中至少三分之一是人民币，剩下真正的外汇储备能坚持战斗多久，流动性有多高，我们就拭目以待吧，很快就能见识到了。
+
+（想了半天还是发V+了。几乎每一条微博都只能发V+。）
 - - -
