--- a/source/_posts/的一季度数据（微博：老蛮频道-2023-04-20）.md
+++ b/source/_posts/的一季度数据（微博：老蛮频道-2023-04-20）.md
@@ -1,4 +1,4 @@
-title: 好看的一季度数据（微博：老蛮频道 2023.04.20-2323.04.24）
+title: 好看的一季度数据（微博：老蛮频道 2023.04.20-2323.04.29）
 author: laoman
 date: 2023-04-21 07:16:14
 tags:
@@ -108,4 +108,68 @@ tags:
 
 这才是底层的真实民意啊同志们。所以，先与美国脱钩，再与欧洲脱钩，这根本就是符合底层民意的明智之举。
 
-你们千万不要以为我这里说的底层只是偏远山区的半文盲们，事实上，死活都找不到工作的大学毕业生，也都在给大使打CALL点赞的。
+你们千万不要以为我这里说的底层只是偏远山区的半文盲们，事实上，死活都找不到工作的大学毕业生，也都在给大使打CALL点赞的
+- - -
+4.26
+
+现在的形势是：
+
+1、欧美世界对我国完全失去了信任。
+
+2、我国也丝毫无意于重获欧美世界的信任。与欧美整体脱钩正在进行时。
+
+3、我国深陷地产泡沫破灭和地方债务风暴发作的风险之中，小银行的资金恰恰深陷其中，岌岌可危。
+
+4、我国年轻人已经普遍躺平，不奋斗不结婚不生娃。
+
+5、我国基础制造业迁移东盟和墨西哥已经形成了浪潮，现在已经开始拆掉国内的生产线往外搬，国内连基础产能都不留了。
+
+6、我国城市化进程已经停止，并开始出现逆城市化，也就是劳动力回流农村。
+
+7、欧美的极左浪潮日益走到了离谱的程度，极端环保+极端性变态自由+黑人优先+难民优先，让整个欧美世界乌烟瘴气，暂时也没任何战略进攻能力。
+
+8、一个有趣的趋势，是北美的墨西哥，和东欧的捷克、匈牙利等国，有了清晰的往区域基础制造业中心地位发展的趋势。
+- - -
+预告一下：四五年前我曾经做过两次很有趣的财政数据总结，讲述四省两市养全国的现实：全国只有广东江苏浙江福建这四省和上海北京这两市，可以实现财政上的自给自足，并向中央上缴巨额税款，拿去转移支付给广大的中西部地区。这两篇文章都曾引起了轩然大波。
+
+今时今日我们都知道，东部各省市在经历了前面三年之后，上缴税款的能力以及积极性都在剧烈退化。那么，现在的情况到底是怎么样呢？广东2022年上缴了多少亿，比2019年多了还是少了？上海还是人均上缴两万块钱吗？它2022年在那么艰难的情况下真的完成税收上缴任务了吗？谁现在又是财政缺口最大的省份？河南还是四川？
+
+所以，我非常有必要重新梳理财政数据，进行全面总结。这一篇内容会以视频形式呈现。
+
+说明一下。我那篇文章之后，这几年有很多机构搞了一些跟风之作，但数据全都是错的。各机构的公式一般都是“公共预算收入—公共预算支出”，真是蠢到无边无际。公共预算收入是已经向中央缴纳了国税之后留存的部分罢了，这算法大幅低估了当地收入。应该用税务总局发布的源于当地的全税收收入做基数！
+
+当然，这也是非常敏感的内容，所以还是只发V+。是不是去管子上发等全部内容出来再判断吧。
+- - -
+4.27
+
+这样，我这两天不是在梳理全国各省级行政主体的财政贡献度嘛，然后发现了一个令我十分震惊的现象， 忍不住要在这里跟各位分享一下。
+
+2019年，源于天津的所有税收收入+非税收入，也就是包含了上缴中央财政的部分的全部公共收入，为4236亿（3460+776），数据来源是税务局及财政局。到2022年，这个数据下降到3787亿（3287+500），降幅高达10.6%。这一降幅也在所有东部省级行政主体中排第一位，其它各省市就算是税收收入下降了，也能靠非税收入把整体收入拉回来。但是天津人民就是这么淡定，税收下降了小两百亿，就下降呗，也不靠罚款把非税收入往上拉。
+
+更让人难以置信的是，天津当地的财政支出在此期间大幅下降。2019年天津公共财政支出3509亿，到2022年下降到2752亿，降幅高达21.6%。由于这个降幅实在太大，我于是认真研究了一下天津各具体财政支出项目，到底降在了哪些地方。这里给出两个地址，可以分别查到2022和2019年天津各单项支出情况（2022年：网页链接  ；2019年：网页链接 ）。具体对比结果如下：
+
+1、城乡社区支出降幅最狠，从797亿下降到290亿。城乡社区支出之中有很大一部分是给基层公务人员（尤其是临时工）发福利待遇的，现在这笔支出基本全砍掉了。与之相关的还有公共服务支出，也就是更直接的全体公务人员的待遇支出，从240亿下降到了209亿。
+
+2、公共安全支出从230亿下降到202亿。
+
+3、农林水支出，从161亿下降到116亿。
+
+4、科学技术支出从109亿下降到63亿；
+
+5、卫生健康支出从198亿下降到175亿.
+
+过紧日子过到天津这样的程度，真是让人肃然起敬。由于如此大幅度的削减财政开支，所以即使源于天津的财政收入大幅下降，天津地区依然向中央财政做出了正贡献，不需要中央财政反过来向天津投钱。
+- - -
+4.28
+
+关于各省财政窟窿的数据梳理已经全部结束，开始做视频。我给出其中一个最基本的结论给各位作为参考吧：越是新冠封控措施严厉的省份，财政窟窿就扩大得越厉害，也就是源于当地的全部财税收入对比其公共财政支出的差额，越来越大。比如，湖北2022年较2019年的财政窟窿扩大了65%，河北58%，辽宁66%，吉林30%。
+- - -
+我一直都说，新时代衡量爱国情怀的基本标准，绝对不是在网上喷口号，这根本就是上世纪70年代之前的古朽玩法，根本就远远落后于时代。新时代的爱国大V应该怎么做？晒地方债券！谁的地方债买的多，谁就具备最强的话语权！
+
+购买量相同的情况下怎么衡量？城投债优于地方债，西部地区的债券优于东部，这就是判断标准。比如，假设有个爱国号晒出五万块钱的甘肃下面一个县城的城投债，那就比另外一头爱国号晒出江苏南京的地方债要牛逼。
+
+晒不出地方债券又强行装爱国逼的，我们广大正义人士务必要认清楚看明白，把他们一脚踢出爱国阵营并踏上一万只脚！
+- - -
+4.29
+
+在此V+区放上高清版的三省三市养全国视频，同时做一些严肃讨论吧。三省三市，目前事实上提供了四种财政上缴模式：上海的竭泽而渔模式；广东浙江的老实人模式；江苏的自利模式；以及天津的自残模式。放在2019年前，是不可能存在这种情况的，在当时来说，只有一种模式，也就是老实人模式。出现的模式越多，越说明财政状况的混乱以及不可持续。而这，恰恰就是最危险的。
