--- a/source/_posts/的一季度数据（微博：老蛮频道-2023-04-20）.md
+++ b/source/_posts/的一季度数据（微博：老蛮频道-2023-04-20）.md
@@ -1,4 +1,4 @@
-title: 好看的一季度数据（微博：老蛮频道 2023.04.20-2323.04.29）
+title: 好看的一季度数据（微博：老蛮频道 2023.04.20-2323.04.30）
 author: laoman
 date: 2023-04-21 07:16:14
 tags:
@@ -173,3 +173,23 @@ tags:
 4.29
 
 在此V+区放上高清版的三省三市养全国视频，同时做一些严肃讨论吧。三省三市，目前事实上提供了四种财政上缴模式：上海的竭泽而渔模式；广东浙江的老实人模式；江苏的自利模式；以及天津的自残模式。放在2019年前，是不可能存在这种情况的，在当时来说，只有一种模式，也就是老实人模式。出现的模式越多，越说明财政状况的混乱以及不可持续。而这，恰恰就是最危险的。
+- - -
+4.30
+
+接着昨天的深入讨论。富裕六省市已经出现了分化，救济全国的热情剧烈消减，这是经济困难时期的潜意识的反应，地市级和级别更低的本地官员们即使没有明确的思路，下意识也会选择把财富留在当地，以应对危局。顶层无论怎么威逼，基层官员的潜意识都会促使他们抵抗。
+
+而在25个穷省那边，它们的心态同样如此：想方设法要更多的钱，花更多的钱，以铸厚自己的家底，同样也是为了应对危机做准备。所以我们可以看到，经济这么困难，但是绝大多数穷省的公共预算支出都在增长。
+
+每个省看起来都在理性的应对危局，而这种理性恰恰会放大危局。
+
+在中央层面，中央看清楚现在的局面，进行过统一协调和部署吗？也就是说，真的有过顶层设计，真的下过大棋吗？没有的。任何相关的部署和行动都没有。如果一定要说有的话，那就是喊过几声过紧日子的口号。
+
+要知道中央财政并不创造收入，所有的收入都是富裕六省市创造了之后上缴给中央的。中央能够大手大脚支持中西部建美丽的花园城区，都是富裕六省市节衣缩食的结果罢了。但是很明显，中央并没有管好这笔钱，当好这个家，没能把富裕六省市上缴的血汗钱，花在中西部该花的地方。它以前没能做到的事，以后能做到吗？
+- - -
+三件事：
+
+1、广交会的欧美进口商成了稀缺资源，亚非拉的黑人大叔成了主角。黑人大叔们的采购能力，呵呵呵。
+
+2、从刚刚发布的四月份PMI数据来看，制造业全面衰退，成为今年的复苏大业中第一个缴械投降的行业。
+
+3、银行体系的结购汇差值变成了负值，显示清晰的外汇净流出迹象。此前三年，两万亿的顺差没能增加国内的外汇家底，现在外汇又开始净流出，无疑是雪上加霜。
