--- a/source/_posts/（微博：老蛮频道-2023-04-26）.md
+++ b/source/_posts/（微博：老蛮频道-2023-04-26）.md
@@ -1,4 +1,4 @@
-title: 老了（微博：老蛮频道 2023.05.01 - 2023.05.04）
+title: 老了（微博：老蛮频道 2023.05.01 - 2023.05.06）
 author: laoman
 date: 2023-04-27 06:44:01
 tags:
@@ -48,3 +48,15 @@ tags:
 建房子并不是多麻烦的事，对我基建大国来说，搞“交钥匙工程”和“全委托代建模式”就可以解决政府开发能力不足的问题。这样政府也拿到了利润，也有兴趣提供更多的房子，以拿到更多利润。老百姓也不用承受房价泡沫之苦。
 
 当时的政府确实在半市场化和计划体制之间犹疑过。后来地价暴涨，地方政府啥都不用干就挣得盆满钵满，于是就没有任何争论了。
+- - -
+5.6
+
+从这几天的风声来看，顶层有稍微放松管制的动作，有些被关了很久的同学放了出来，有些长期不允许出去的也放出去了。毕竟日益严厉的左转和封闭，导致整个欧美世界越来越干脆的脱钩，中国经济真的受不了。
+广交会到昨天第三期结束，欧美商人减少了足足八成，没有任何经济上的理由，人家就是不来了，你再价廉物美也不来，谁站台都没用，这就是清晰的信号。
+
+顶层确实是把广交会当成信号器的，信号好就不会有任何变化。现在信号实在太差，所以会有一点极微小动作了。
+只不过这些动作幅度极微小，根本不足引起浪花就是了。
+- - -
+2022年的春季广交会一片兵荒马乱，中间还因为某事突然封管，把几万人关了大半天，无数人饿得受不住了翻墙爬窗逃跑，简直堪称管理上的灾难。但哪怕是混乱成这样，统计结果也成交了292亿美元。
+
+今年这一场刚结束，线上+线下成交了250亿美元。不管这其中有多少水分吧，数据趋势已经非常清晰了。
