--- a/source/_posts/再次禁言（推特：老蛮频道-2023-05-10）.md
+++ b/source/_posts/再次禁言（推特：老蛮频道-2023-05-10）.md
@@ -1,4 +1,4 @@
-title: 再次禁言（推特：老蛮频道 2023.05.10- 2023.05.15）
+title: 再次禁言（推特：老蛮频道 2023.05.10- 2023.05.16）
 author: laoman
 date: 2023-05-15 22:49:46
 tags:
@@ -137,3 +137,58 @@ tags:
 这么说吧，中国必须要迎接此后的惊涛骇浪，美国人也不是生活天堂里。指望AI技术可以在短期内给美国带来多大的技术革命，是不现实的。而如果美国继续这么左下去，在已经实际开启的中美对抗中，是不是真的就稳操胜券，这都是不能直接打包票的。
 
 ![中美](/images/20230515006.jpg)
+- - -
+刚刚才发现，已经蓝标了。
+
+总结一下，玩推特5周，3.5万粉丝，不算少，这大概得益于我这么多年积累的口碑。毕竟中国第一数据大师和封号最多人士的双重BUFF加持，拿到推特上也不算知名度很低。
+
+而这5周的整体感受是，推特上的人心比微博浮躁多了。微博上，尤其是在我的微博评论区，对于中国现实情况的批评，当然也是极其尖锐。即使骂两声就会封号禁言，也拦不住微博的博友们想尽办法隐晦的批评。然而到了推上，呵呵，剩下的只有咒骂而已。严厉的批评、深刻的分析以及深入骨髓的揭批，这些其实都没有。
+
+我自己在大陆工作了20余年，职业经历横跨政府、企业和金融机构。我并不认为自己20余年的摸爬滚打和兢兢业业，是毫无用处的垃圾。其他那些刻苦工作的人，14亿人，他们的工作，当然也不都是垃圾。14亿人辛苦创造出来的家底，即使再也怎么败家，也不可能像推上的朋友们所咒骂的那样，在一夜之间灰飞烟灭。
+
+就我个人来说，我算是从社会动员的角度切入经济论述的第一人，从2016年至今，用很多篇的文字系统的讲述了中国经济一步步走向停滞，走向破产的根源——社会动员能力的逐渐丧失。至于很多人浮躁的指责现在中国的极权化，这都是我很多年前就公开讲述过的内容，并详细分析过是什么原因造成了现在的极权化。而极权所带来的社会动员能力的短暂提升与动员能力的最终丧失，这整个演变过程，我微博上的读者们都非常熟悉。在读完现在推特上的所有留言后，我的评价是：各位对“动员”，连最基本的理解能力都没有。乃至于，对极权这件事，各位都缺乏最起码的概念上的认知。
+
+所以，一直到现在这一刻，我仍然期待着，在评论里面，能够出现稍微具有可读性的内容。各位加油。我看好你们。
+- - -
+5.16
+
+接着这几天的话题。
+
+中美双方的政府动员能力都在剧烈下降，并因此都出现了无法实现战略目标的情况。
+
+中国政府动员能力的下降，其根源在于，自改革开放以来，中国的基层动员依赖的就是“财富激励”模式，以经济持续发展之下的富裕生活，作为动员老百姓努力工作并服从命令的诱惑。
+
+在经济下行失业率高企的背景下，中国政府越来越难以动员企业扩大投资，所以工业投资增速长年维持负值。也无法说服年轻人恋爱生子，所以人口开始负增长。
+
+更麻烦的是，中国已经无法开征新税种。在财富不可能增长之后，老百姓的怨气本来就无从发泄，还要再从老百姓的饭盆里抢吃的，这压根就是胡来。所以房产税一直喊，一直不敢落地。原因就是动员能力剧烈下降。
+
+在这样的背景下，中国政府选择了另一个方向：既然无法动员，那就增加社会抑制力，同样也能较长时间的维护社会稳定，好过当场崩溃。社会动员与社会抑制是完全不同的两个方向，动员是激励老百姓积极工作努力搞事情，而抑制则是禁止老百姓搞事情，这也不许那也不许。清零三年，就是社会抑制力的全面壮大期。社会抑制力越强，社会动员能力就越弱，所以中国版的芯片计划和大飞机计划近期陆续都陷入失败。
+
+没有了社会动员能力，依靠社会抑制力治国，中国社会就越来越是一潭死水，如果欧美科技与经济在此期间突飞猛进，那中国必输无疑。
+
+然而欧美在极左的道路上也是越走越远。人工智能的第一准则不是客观公正以数据为先，而是政治正确，凡是违背政治正确的数据都不能提及。极度环保、有色人种保护和各种性倾向保护，我都不知道怎么评价。并且这些玩意统统在政治上具有最高优先级，而促进科技与经济发展，反而被放在可有可无的位置上。免疫医学在近三年就是笑话。至于科技上的重大突破，已经很久都没听说过了。
+
+欧美在政治上左成这样，对言论的钳制也不比中国好多少，几个人随便发几封邮件，就可以随意决定封杀谁的社交账号。在这种背景下，欧美的社会内部也是高度撕裂，左右一见面就互喷。这还谈什么发展壮大？还谈什么动员？根本就动员不起来好吧。
+
+世事就是如此。中国这边的抑制程度固然是越来越高，让现在的中国人越来越难以承受。而欧美的社会大分裂，同样也是不可抗拒的历史浪潮，绝不是再投两次票就可以解决的小争议。左和右的人数都差不多，哪一方都没有明显优势，这种思想的全民大撕裂，解决起来并不比中国政府执着于社会抑制要容易。
+
+所以，莫名奇妙的，整个世界就形成了僵持局面。大撕裂中的欧美，因为同样缺乏动员能力，居然奈何不了一滩死水的中国。甚至在中国内部，因为强大的社会抑制，表面上看起来比左右两派整天吵得不可开交的欧美，要安宁和稳定得多，所以现在中国的粉红一派人数也是越来越多，甚至很多欧美华裔也自发成长为粉红。
+
+这么说吧，如果欧美继续这么左下去，那中国凭借社会抑制力，击败欧美的全民大撕裂，也不是完全没有可能的事。这事在2018年的可能性还是零，现在至少已经不是零了。
+- - -
+再接上一条，继续来说动员。
+
+为什么要对现在的中美欧日都使用“社会动员能力”的指标进行观察和评价？因为全球性大萧条已经近在眼前。
+
+2018年的时候这场大萧条看起来还只是中国的事，结果此后欧美的极左势力胡搞八搞，搞出不可收拾的通胀潮，美联储资产一年内就从3.8万亿干到8.6万亿，所有物价全面暴涨，同时拜登还打着环保的旗号严厉打压国内的能源开采行业，对通胀而言是雪上加霜，物价之母燃油的价格翻了两三倍。搞出这些不可收拾的事情之后，就是痛苦的加息缩表。
+
+美联储的政策箱里根本就没有什么丰富的可选政策工具，在历史上人类也根本就没战胜过任何一次已经成型的通胀潮，无非就是疯狂加息，加到大萧条的程度罢了。1980年代美联储加息加到10%以上也没控制住通胀，最后只不过是依靠信息技术革命，消化了疯狂的游资，才解决了问题。
+
+现在日本还算安稳，就现在美欧极左派搞出来的破事，把自己送进根本就不可能解决的通胀深渊，也就逃不过大萧条的命运。在大萧条之下，社会动员能力是整个国家应对危局必须具备的能力，毫无办法，根本逃不过去。
+
+美欧本来不需要经历这场考验，自己作死，把自己送上了考场。那么，现在就看大撕裂之下的美欧，能交出什么样的答卷吧。
+
+中国已经做好了准备，彻底放弃动员能力，专心加强完全相反的社会抑制力。反正斗不过大萧条，那就把国民狠狠的摁住，不让他们动弹搞事情。接下来就等着跟美欧比命长，这就是中国的策略。
+
+而美欧呢？本来连考场都不用上，现在上了考场也觉得自己稳操胜券。好吧，现在还有99.99%胜率吧，总归已经不是百分百。不管你什么级别的BOSS，露出了血条就可以打了。美欧再这么继续左下去的话，胜率继续往下降，那就是板上钉钉的事。
+- - -
